fix: burger visibilty

--- a/app/assets/scss/header.scss
+++ b/app/assets/scss/header.scss
@@ -5,7 +5,7 @@
   width: 100%;
   z-index: 40;
   &::after {
-    content: "";
+    content: '';
     width: 100%;
     display: block;
     background: linear-gradient(180deg, rgba(0, 1, 10, 1), rgba(0, 1, 10, 0));
@@ -80,7 +80,7 @@
         }
 
         &::after {
-          content: "";
+          content: '';
           width: 100%;
           height: 125px;
           background: rgba($color: #a3f6ef, $alpha: 0.3);
@@ -104,7 +104,7 @@
         }
 
         &::before {
-          content: "";
+          content: '';
           width: 100%;
           height: 2px;
           background: #a3f6ef;
@@ -239,7 +239,7 @@
 
   &__burger {
     @include tabletLg {
-      display: block;
+      display: block !important;
       order: 3;
     }
     width: 34px;
